# static-algebra

./: Cargo.toml  README.md
src/: conjugate.rs  const_iterator.rs  count.rs  iterable.rs  lib.rs  num_traits.rs  number.rs  ops for later.rs  ops.rs  static_list.rs  test.rs
src/matrix/: column_view.rs  fmt.rs  from.rs  mod.rs  ops.rs  properties.rs
src/number/: mod.rs  static_ops.rs
src/recursive_list/: iterable_impl.rs  mod.rs  static_index_impl.rs  static_map_impl.rs
src/static_list/: index.rs  iterable.rs  iterable_impl.rs  iterable_impls.rs  mod.rs  static_index.rs
src/vector/: core_ops.rs  custom_ops.rs  fmt.rs  from.rs  helper.rs  mod.rs  ops.rs  properties.rs  std_ops.rs  view.rs
