[package]
name = "static-algebra"
version = "0.1.0"
edition = "2024"
authors = ["Ben Phillips <ben.a.phillips@outlook.com>"]
license = "LGPL-2.1-or-later"
description = "N-dimensional, arbitrary-type linear algebra library for stable Rust with no unsafe, no panic, no macros, no nightly, and nostd."
repository = "https://github.com/Jorbon/static-algebra"
readme = "README.md"
keywords = ["math", "vector", "matrix", "generic", "verification"]
categories = ["data-structures", "mathematics", "no-std"]

[lib]
crate-type = ["rlib"]

[features]
default = ["num-traits"]

[dependencies]
num-traits = { version = "0.2.19", optional = true }
